--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -23,24 +23,21 @@
 ----
 ==About PRIDE Inspector==
 The key features include:
-  * Fast loading of *mzML* and *PRIDE XML* files.
+  * Fast loading of *mzML*, *PRIDE XML* and *mzIdentML*files.
   * Search, access and download all PRIDE public database experiments.
   * Different views on spectra, chromatogram, protein, peptides and metadata.
-  * Visualize quantification data for both protein and peptide identifications.
+  * Visualise quantification data for both protein and peptide identifications.
   * Experiment summary on key measurements of experiment quality.
   * Download additional protein details, such as: protein name, sequence.
-  * Visualize protein sequences and their peptide/PTM coverage.
-  * Decoy filter on both protein and peptide identifications.
-  * Visualization for all spectra and chromatograms, including automatic MS2 fragment ion annotations.
+  * Visualise protein sequences and their peptide/PTM coverage.
+  * Visualisation for all spectra and chromatograms, including automatic MS2 fragment ion annotations.
   * Possibility to perform a quality assessment of the data using a statistical view with different charts.
   * User-friendly download facility for *private* PRIDE experiments.
 
 The data formats supported by PRIDE Inspector are:
  * *[http://www.psidev.info/index.php?q=node/257 mzML 1.1]*
  * *[http://www.ebi.ac.uk/pride/schemaXmlspyDocumentation.do PRIDE XML 2.1]* 
-
-*Note*: We do have plans to support additional formats like mzIdentML in the near future.
-
+ * *[http://www.psidev.info/mzidentml mzIdentML 1.1.0]* 
 
 ----
 ==PRIDE Inspector Publication==
@@ -58,8 +55,8 @@ When you use PRIDE Inspector, please cite the following publication:
 
 ===Installation Requirements===
   * *Java*: Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
-  * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
-  * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
+  * *Operating System*: The current version has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
+  * *Memory*: MS dataset can be very large sometimes, in order to get good performance from PRIDE Inspector, we recommend you to have 1G of free memory.  
 
 [PRIDEInspector top of page]
 
@@ -110,7 +107,7 @@ The zip file contains also an `examples` folder with 2 sample files: one in mzML
 
 3. *My Mac complains about security and uncertified applications when I try to run the PRIDE Inspector with the Web Start option*
   Apple has introduced tighter security settings (since version 10.8, Mountain Lion), which by default don't allow applications loaded over the internet to run if they are not from the Apple Store or from an Apple certified programmer. There are currently issues certifying Java Web Start applications and we are working to find a solution. In the meantime, users can change the security settings in their Mac. 
-  Go to: Systems Perferences -> Security & Privacy -> General tab and change the "Allow applications downloaded from" setting from the default "Mac App Store and identified developers" to "Anywhere".
+  Go to: Systems Preferences -> Security & Privacy -> General tab and change the "Allow applications downloaded from" setting from the default "Mac App Store and identified developers" to "Anywhere".
   More information can be found [http://support.apple.com/kb/HT5290 here].
 
   Note: Java has it's own security checks and the PRIDE Inspector is properly equipped with recognised security certificates. Unfortunately Apple does not recognise them for their new security feature. 
