--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -5,11 +5,11 @@
   <tr>
     <td width="70%">
  * [#About_PRIDE_Inspector About PRIDE Inspector]
- * [#PRIDE_Inspector_Publication PRIDE Inspector Publication]
  * [#Getting_PRIDE_Inspector Getting PRIDE Inspector]
   * [#Installation_Requirements Installation Requirements]
   * [#Launch_via_Webstart Launch via Webstart]
   * [#Download Download]
+ * [#PRIDE_Inspector_Publication PRIDE Inspector Publication]
  * [#Disclaimer Disclaimer]
  * [#FAQs FAQs]
  * [#Getting_Help Getting Help]
@@ -36,18 +36,8 @@ The key features include:
 
 The data formats supported by PRIDE Inspector are:
  * *[http://www.psidev.info/index.php?q=node/257 mzML 1.1]*
- * *[http://www.ebi.ac.uk/pride/schemaXmlspyDocumentation.do PRIDE XML 2.1]* 
+ * *[http://www.ebi.ac.uk/pride/resources/schema/pride/doc/pride.html PRIDE XML 2.1]* 
  * *[http://www.psidev.info/mzidentml mzIdentML 1.1.0]* 
-
-----
-==PRIDE Inspector Publication==
-
-When you use PRIDE Inspector, please cite the following publication:
-
- * *[http://www.nature.com/nbt/journal/v30/n2/full/nbt.2112.html Wang et al., Nat Biotechnol 2012; 30:130-132]. [http://www.nature.com/nbt/journal/v30/n2/pdf/nbt.2112.pdf PDF File].  [http://www.ncbi.nlm.nih.gov/pubmed/22318026 PubMed record].*
-
-
-[PRIDEInspector top of page]
 
 ----
 
@@ -88,6 +78,17 @@ The zip file contains also an `examples` folder with 2 sample files: one in mzML
 [PRIDEInspector top of page]
 
 ----
+==PRIDE Inspector Publication==
+
+When you use PRIDE Inspector, please cite the following publication:
+
+ * *[http://www.nature.com/nbt/journal/v30/n2/full/nbt.2112.html Wang et al., Nat Biotechnol 2012; 30:130-132]. [http://www.nature.com/nbt/journal/v30/n2/pdf/nbt.2112.pdf PDF File].  [http://www.ncbi.nlm.nih.gov/pubmed/22318026 PubMed record].*
+
+
+[PRIDEInspector top of page]
+
+----
+
 
 ==Disclaimer==
   # *Disclaimer on shared peptides problem*
