--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -12,6 +12,10 @@
 
 ----
 == News ==
+* Jan 06. 2014:_ [https://code.google.com/p/pride-toolsuite/wiki/PRIDEInspector PRIDE Inspector Release Version 2.0.0] is now available:*
+ * Support for mzIdentML and related peak list format.
+ * Brand new private review feature for journal reviewers.
+
 * March 29. 2013:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector Release Version 1.3.0] is now available:*
  * Fragment ion table, which can be used to validate experimental fragment ions.
  * Automatic fragment ion annotation, it is used to generate fragment ions when they are not available.
